fix: Correções gerais no Swing e logs